# CrossPlatformEngine

./: .gitignore  CMakeLists.txt  README.txt
AndroidEnginePort/: .cproject  AndroidManifest.xml
AndroidEnginePort/jni/: Android.mk  Application.mk  BuildHeader.sh  Value.h
AndroidEnginePort/wee/: Value.cpp
assets/: Box.xml  Box2.xml  BoxPush.xml  BoxStack.xml  Boxs.xml  Bunny.xml  BunnyLevel.xml  DebugDraw.fsh  DebugDraw.vsh  DebugDraw.xml  GLSLShaders.xml  Head.xml  LevelList.xml  Phong.xml  PhongShading.frag  PhongShading.fs  PhongShading.fsh  PhongShading.util  PhongShading.vert  PhongShading.vsh  PhysicsMaterials.xml  SFMLTest  Sibenik.xml  SibenikLevel.xml  SibenikLvel.xml  Sphere.xml  Sphere2.xml  SpherePush.xml  SphereStack.xml  Sponza.xml  SponzaLevel.xml  Wall.xml  blade.xml  bladeLevel.xml  camera.xml  clear.sh  cratemat.xml  dragon.xml  dragonLevel.xml  ground.xml  (+5 more)
solution/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  SFMLTest.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
solution/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeMinSizeRel  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel
solution/SFMLTest.xcodeproj/: project.pbxproj
solutionMac/: CMakeCache.txt  cmake_install.cmake
src/: CMakeLists.txt
src/Engine/: CMakeLists.txt  (+21 more)
src/SFMLTest/: CMakeLists.txt  CS350BoundingVolume.cpp  CS350BoundingVolume.h  CameraController.cpp  CameraController.h  ComponentGen.h  Components.h  Console.cpp  Console.h  LevelSystem.cpp  LevelSystem.h  Readme.txt  main.cpp
(+352 files in other folders)
